--- a/learning/immunology.html
+++ b/learning/immunology.html
@@ -506,7 +506,117 @@
                     <section>
                          <h2 class="science-headers" id="complement">Complement</h2>
                          <p>     
-                            
+                              Complement is a group of proteins that are created by the liver and circulate in the blood stream. It is 
+                              designed to complement the rest of the immune system with fighting infections. There are over a dozen proteins 
+                              that play a role in the complement system. We cover the key 9 that stats at C1 and goes to C9, but there are 
+                              many others that play a role in the process as inhibitors and regulators of complement. The complement proteins 
+                              are produced in the liver and circulate in the blood. They can pass into the tissues. The complement proteins 
+                              circulate in their inactive form. They get activated by pathogens or other immune proteins. Once activated, they 
+                              act like a cascade where 1 protein activates 1 or more other proteins which combine to make and active enzyme 
+                              complexes which activate other complement proteins. 
+                         </p>
+
+                         <p>
+                              The complement system is made of of 3 pathways. They all start at different places, but they all end up at 
+                              the same result. The 3 pathways of complement are the Alternavtive, the Lectin and the Classical Pathways. The Lectin 
+                              and Alternative fall under the innate immune system as they are capable of triggering on their own in response 
+                              to pathogens. The Classical pathway is part of the adaptive immune system as they work with antibodies once they 
+                              are produced. 
+                         </p>
+                         <p>
+                              The purpose of complement is 3 fold with inflammation, opsonization and lysis. Complement causes 
+                              inflammation to alert other immune cells that an infection exists.
+                              It coats or opsonizes the pathogens to make them easier for sentry cells to engulf and break them down. 
+                              The final role of complement is lysis. This is the process of creating small holes in the membranes 
+                              of pathogens to kill them. 
+                         </p>
+                         <p>
+                              There are 2 key complement proteins in this system. The first in the C3 protein which is responsible for 
+                              causing opsonization of pathogens with C3 complement proteins. This makes them easy for sentry cells to 
+                              bind to the C3 with their C3 receptors and engulf and destroy the pathogens. When the C3 is activated, it gets 
+                              broken into 2 pieces called the a and b fragments. The b fragment is what coats the pathogens. The a fragment 
+                              creates inflammation to call in the sentry cells like neutrophils into the space to kill the pathogens. Many 
+                              sentry cells will have complement receptors for binding C3. That makes C3 a critical protein for the complement 
+                              system as it drives the process of opsonization. All the complemnet pathways start at different places, but
+                              they all reach and activate C3 to get the common process of opsonization going. The C3 protein on the surface
+                              of the pathogen will recruit another complement protein called Factor B. This binds to C3 and then gets cleaved 
+                              and activated by Factor D. The activated Factor B will combine with the C3 and create an enzyme complex called 
+                              the C3 Convertase. This can activate hundreds of more C3 than just having C3 alone on the pathogen surface. This is 
+                              a key process of complement to reach C3 activate Factor B to form that C3 convertase and drive tons of C3 activation 
+                              and opsonization of the pathogens. It becomes a chain reaction that continues to amplify as it goes. 
+                         </p>
+                         <p>
+                              The other key complement protein is C5. Once the C3 covertase is formed on the pathogen surface, it 
+                              will also begin to recruit, cleave and activate C5. The C5 protein breaks into 2 pieces which are the 
+                              a and b fragments. The b fragment will bind to the pathogen surface and start another chain reaction. The 
+                              a fragement will cause inflammation and call in more sentry cells to kill pathogens. Once the C5b is on the 
+                              pathogen surface, it will create a C5 covertase by binding with the C3 convertase. The C5 convertase will 
+                              recruit C6, C7 and C8. These three proteins form a complex that looks like a 
+                              drilling rig. Then the C9 is used to drill through the membrane of the pathogen. Many of the C9 proteins wil 
+                              be used. This creates a hole in the membrane of the pathogen. When this happens in mass, it creates many 
+                              holes in the pathogen which causes it to fall apart. This is called Lysis. The C5 convertase on the surface of the pathogen 
+                              drives the process of forming these holes in the pathogen surface. The complex it builds is called the Membrane 
+                              Attack Complex using C6, C7, C8 and C9. This is known as the MAC complex. The whole process is to drive 
+                              the rupture of pathogens and their death. This is a critical process of the innate system to control pathogens 
+                              until the adaptive immune system can kick in. It is also a soruces of many immune disorders that stem from 
+                              deficiencies or overactivity of the complement system. Auto Immune responses of complement against Red Blood
+                              Cells or Platelets leads to destruction of these cells and immune disorders.
+                         </p>
+                         <p>
+                              Sometimes you will hear this process called the Final Common Pathway of complement. 
+                              It includes the process of complement where C3 coats pathogens and activates C5 which 
+                              then creates a MAC and kills the pathogen. That is because 
+                              this process is common to all 3 of the complement pathways. Now we will look at the 3 pathways of complement 
+                              and where they start. We will see how they reach the point of where they activate C3 and the Common Pathway.
+                         </p>
+                         <p>
+                              The Alternative pathway is the easiest to cover. It starts with Lipopolysaccharides on the surface of a 
+                              bacteria. This alone will trigger the C3 and begin to deposit the C3b fragements on the pathogen surface. 
+                              Then Factor B will come in and bind to the C3b and be activated by Factor D. This creates the C3bBb complex on 
+                              the pathogen. This is called the C3 Covertase. The C3 convertase will go on to activate large amounts of 
+                              C3 and deposit the C3b fragments on the pathogen surface causing opsonization. The C3a fragment will go on to 
+                              cause inflammation. The C5 will come in and bind to some of the C3 convertases and be activated. This will 
+                              create a new C5 convertase with C3bBbC5b. This goes on to recruit the MAC complex proteins and drive lysis. There 
+                              is a safey mechanism on this Alternative pathway. Since the C3 can activate spontaneously, there are 2 inhibitors 
+                              that circulate in the blood called Factor H and Factor I. These factors are designed to bind to any activated 
+                              C3 that is flaoting free in the blood. This prevents them from landing on our cells and triggering complement 
+                              against our cells.
+                         </p>
+                         <p>
+                              The Lectin pathway of complement starts with a protein that circulates in the blood. It is called 
+                              Mannose Binding Lectin. This protein is made in the liver and circulates in the blood. It binds to Mannose.
+                              The Mannose is a special sugar structure that is found on some bacteria that is not on our healthy cells. The 
+                              Mannose Binding Lectin (MBL) will bind to this mannose and begin the Lectin Pathway. The MBL has 2 active serine 
+                              complexs on it called the Mannose Associated Serine Protease or MASP1 and MASP2. These 2 enzymes will recruit 
+                              and cleave both C4 and C2 of complement. These will be broken into 2 fragement with an a fragement and a b fragement.
+                              The C4b and C2a fragments will bind to that pathogen and create a C3 convertase complex of C4bC2a. That will go and recruit
+                              and activate C3. Now we are already up to the final common pathway as C3 will go on to do what it does and opsonize.
+                              When C3 is activated, some of it will bind with the C4bC2a and form another complex of C4bC2aC3b which is another 
+                              version of the C5 convertase.
+                         </p>
+                         <p>
+                              The last pathway of complement is part of the Adaptive Immune system. It is called the Classical pathway. It
+                              mostly starts with Antibodies that bind to pathogens. The Fc region of the antibody has a place where the C1 
+                              complement protein can bind. It has to serine proteases called C1r and C1s. They will recruit and activate C4 and C2.
+                              The Classical Pathway works exactly like the lectin pathway except it starts with the C1 complement protein instead 
+                              of MBL. There is one way the Classical Pathway participates in the innate immune response. There is a protein produced 
+                              by the Liver during the acute phase of Inflammation called C Reactive Protien or CRP. This protein is designed to
+                              bind to Phosphocholine. This can be expressed by stressed or damaged cells. The CRP will bind to the Phosphocholine and 
+                              recruit C1 and trigger complement activation through the Classical Pathway. There is also an inhibitor in this pathway 
+                              called C1 esterase. The liver produces a small amount of C1 esterase which binds to and blocks active C1. This 
+                              works as a safety. When small amounts of C1 are activated, it will be blocked by C1 esterase. When antibodies are 
+                              present and binding complement, there will be high levels of activation that it will overwhelm the C1 esterase.
+                              This C1 esterase acts like a buffer so that only high levels of activation are taken seriously. Any low level of C1 
+                              activation will be inhibited. 
+                         </p>
+                         <p>
+                              There are a few other safeties on the Complement System which are important to know. These are Decay Accelerating 
+                              Factor (DAF) also called CD55. The other is MAC Inhibitor Protein also called CD59. All cells in the human body 
+                              that has a nucleus will make these 2 key proteins. The CD55 will block and remove any active C4 or C3 on a healthy 
+                              cell membrane. The CD59 is designed to remove any MAC complexes as they try to form on a healthy cells. These are 2
+                              very improtant protective systems in cell biology and immunology. There are diseases that stem from the loss of 
+                              these key proteins. The other issue is those cells that don't have a nucleus. This is common for Red Blood Cells and 
+                              Platelets which don't have these CD55 and CD59 proteins. They often get hit by complement in auto immune disorders. 
                          </p>
                          <p class="top-link"><a href="#top">Top</a></p>
                     </section>
