--- a/index.html
+++ b/index.html
@@ -112,6 +112,25 @@
 
                <section class="container">
                     <h2 class="section-title">
+                         <a href="investing/investing.html">Investing</a>
+                    </h2>
+
+                    <p class="large-text">
+                         Investing in biotech can be hard. The statictics show that 90% of the science that enters the clinic fails.
+                         When investing in biotech, I find that I do better when I have a good strategy. I think strategy trumps any conviction
+                         I might have in any company. I blend a hybrid strategy of trading and investing that works well for me.
+                         I am not a financial advisor, but I have been investing for 27 years. Here in the Investing section,
+                         I will share my biotech portfolio and all my strategies for investing. This section will focus on sharing
+                         how I build my portfolio by focusing on these key innvoation themes. I will share how I reseach companies
+                         and rank them from best to worst for each science theme. I will share how I manage my portfolio strategy with
+                         trading around my core position. I will share my system for valuing biotech companies. I will share my rules
+                         for staying disciplined. This is not designed to be financial advice. You should always consulte a professional 
+                         financial advisor before making any investments. 
+                    </p>
+               </section>
+
+               <section class="container">
+                    <h2 class="section-title">
                          <a href="pages/science.html">The Science</a>
                     </h2>
 
