--- a/investing/investing.html
+++ b/investing/investing.html
@@ -55,11 +55,17 @@
           <!--Here Starts the Main Body-->
 
           <main>
-               <p>
-                    I am not a financial advisor. Here I will share my investing strategy that I built over 27 years
-                    of investing. It is here for information and learning purposes. Please refer to your financail advisor 
-                    before making any investment decisions.
-               </p>
+               
+               <ul>
+                    <li>My Portfolio</li>
+                    <li>Building my Portfolio</li>
+                    <li>How I Pick Companies</li>
+                    <li>Trading Around a Core Position</li>
+                    <li>My System for Valuing Biotech</li>
+                    <li>My Rules for Staying Disciplined</li>
+               </ul>
+
+               <p>&#42; I am not a Financial Advisor. This is just My Strategy. Please refer to your financail advisor befor making any investing decisions.</p>
           </main>
 
           <!--Here Starts the Footer-->
