--- a/learning/genetics.html
+++ b/learning/genetics.html
@@ -919,6 +919,8 @@
                          </p>
                          <p class="top-link"><a href="#top">Top</a></p>
                     </section>
+
+                    <p>&#42; I am not a doctor. This is not designed to be Medical Advice. Please refer to your doctor for Medical desicisions</p>
                </div>
 
           </main>
