--- a/learning/immunology.html
+++ b/learning/immunology.html
@@ -820,6 +820,8 @@
                          <p class="top-link"><a href="#top">Top</a></p>
                     </section>
 
+                    <p>&#42; I am not a doctor. This is not designed to be Medical Advice. Please refer to your doctor for Medical desicisions</p>
+
                </div>
 
           </main>
