--- a/learning/inflammation.html
+++ b/learning/inflammation.html
@@ -230,6 +230,8 @@
                     
                     </section>
 
+                    <p>&#42; I am not a doctor. This is not designed to be Medical Advice. Please refer to your doctor for Medical desicisions</p>
+
                    
                </div>
 
