--- a/investing/investing.html
+++ b/investing/investing.html
@@ -57,15 +57,22 @@
           <main>
                
                <ul>
-                    <li>My Portfolio</li>
-                    <li>Building my Portfolio</li>
-                    <li>How I Pick Companies</li>
-                    <li>Trading Around a Core Position</li>
-                    <li>My System for Valuing Biotech</li>
-                    <li>My Rules for Staying Disciplined</li>
+                    <li class="tech-list">
+                         <a href="portfolio.html">My Portfolio</a>
+                    </li>
+                    <li>
+                         Building my Portfolio</li>
+                    <li>
+                         How I Pick Companies</li>
+                    <li>
+                         Trading Around a Core Position</li>
+                    <li>
+                         My System for Valuing Biotech</li>
+                    <li>
+                         My Rules for Staying Disciplined</li>
                </ul>
 
-               <p>&#42; I am not a Financial Advisor. This is just My Strategy. Please refer to your financail advisor befor making any investing decisions.</p>
+               <p>&#42; I am not a Financial Advisor. This is just My Strategy. Please refer to your financail advisor before making any investing decisions.</p>
           </main>
 
           <!--Here Starts the Footer-->
