--- a/investing/portfolio.html
+++ b/investing/portfolio.html
@@ -55,6 +55,8 @@
           <!--Here Starts the Main Body-->
 
           <main>
+
+               <p class="updated">Last Updated 1/22/2023</p>
                
                <div class="portfolio">
                     <table class="theme">
