--- a/investing/investing.html
+++ b/investing/investing.html
@@ -5,7 +5,7 @@
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <meta name="description" content="Learning and Education on Biotechnology Concepts">
+          <meta name="description" content="Sharing My Strategy around Investing in Biotech">
           <meta name="author" content="CoderKid2k">
 
           <link rel="stylesheet" href="../styles/header.css">
