--- a/pages/science.html
+++ b/pages/science.html
@@ -5,7 +5,7 @@
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <meta name="description" content="TechBio, Genomics, Sequencing, Synthetic Biology, and iPSC">
+          <meta name="description" content="Cell Signaling, Genentics, Immunology, Oncology, Hematology">
           <meta name="author" content="CoderKid2k">
 
           <link rel="stylesheet" href="../styles/header.css">
@@ -230,9 +230,11 @@
                          </ul>
                     </section>
                     <section class="science-topic">
-                         <h2 class="science-list">Oncology</h2>
+                         <h2 class="science-list"><a href="../learning/oncology.html">Oncology</a></h2>
                          <ul>
-                              <li>Chemotherapies</li>
+                              <li class="science-topics">
+                                   <a href="../learning/chemotherapy.html">Chemotherapies</a>
+                              </li>
                               <li>The Cell Cycle</li>
                               <li>What is Cancer?</li>
                               <li>Types and Incidence</li>
