Finished Investing Pages

--- a/learning/chemotherapy.html
+++ b/learning/chemotherapy.html
@@ -126,7 +126,7 @@
                          </p>
                          <p>
                               Chemotherapies are actually groups of drugs that share many of the similar effects to block cells from 
-                              dividing. A regiment is a set of cheotherapies drugs chosen from these many classes of chemotherapy drugs.
+                              dividing. A regiment is a set of chemotherapies drugs chosen from these many classes of drugs.
                               Each chemotherapy regiment, for a specific cancer, might have different drugs from these classes 
                               in them. Sometimes, even different chemotherapy regiments will be different between patients with 
                               the same type of cancer. This will cover the classes of chemotherapy drugs. The Oncologist will pick
@@ -140,7 +140,7 @@
                     </section>
 
                     <section>
-                         <h2 class="science-headers" id="anthra">Anthrcyclines</h2>
+                         <h2 class="science-headers" id="anthra">Anthracyclines</h2>
                          <p> 
                               The first class of Chemotherapy drugs we will look at are a class of antibiotics called the Anthracyclines.
                               You might be wondering why a class of antibiotics could work to fight cancer. We will look at the 
@@ -183,7 +183,7 @@
                          <h2 class="science-headers" id="metabolites">Antimetabolites</h2>
                          <p> 
                               Antimetabolites target cancer at the S phase of the cell cycle. To understand them, we will 
-                              need to look and the metabolism of DNA nucleotides. The nucleotides used in the copying of DNA have to be 
+                              need to look at the metabolism of DNA nucleotides. The nucleotides used in the copying of DNA have to be 
                               synthesized. This is done in a chemical process called purine and pyrimidine metabolism. This is a very 
                               complex chemical process. We don't need to understand the process other than it happens. There are a bunch 
                               of enzymes and folate needed to synthesize these nucleotides. The antimetabolite drugs will target the 
@@ -315,7 +315,7 @@
                          <p class="top-link"><a href="#top">Top</a></p>
                     </section>
 
-                    <p>&#42; I am not a doctor. This is not designed to be Medical Advice. Please refer to your doctor for Medical desicisions</p>
+                    <p>&#42; I am not a doctor. This is not designed to be Medical Advice. Please refer to your doctor for Medical Decisions/p>
 
                </div>
 
