--- a/investing/investing.html
+++ b/investing/investing.html
@@ -55,21 +55,28 @@
           <!--Here Starts the Main Body-->
 
           <main>
+
+               <h1 class="science-headers">Investing</h1>
                
                <ul>
                     <li class="investor-link">
                          <a href="portfolio.html">My Portfolio</a>
                     </li>
-                    <li>
-                         Building my Portfolio</li>
-                    <li>
-                         How I Pick Companies</li>
-                    <li>
-                         Trading Around a Core Position</li>
-                    <li>
-                         My System for Valuing Biotech</li>
-                    <li>
-                         My Rules for Staying Disciplined</li>
+                    <li class="investor-link">
+                         <a href="strategy.html">Building my Portfolio</a>
+                    </li>
+                    <li class="investor-link">
+                         <a href="fundamentals.html">How I Pick Companies</a>
+                    </li>
+                    <li class="investor-link">
+                         <a href="value.html">My System for Valuing Biotech</a>
+                    </li>
+                    <li class="investor-link">
+                         <a href="trading.html">Trading Around a Core Position</a>
+                    </li>
+                    <li class="investor-link">
+                         <a href="discipline.html">My Rules for Staying Disciplined</a>
+                    </li>
                </ul>
 
                <p>&#42; I am not a Financial Advisor. This is just My Strategy. Please refer to your financail advisor before making any investing decisions.</p>
