--- a/learning/oncology.html
+++ b/learning/oncology.html
@@ -123,7 +123,7 @@
                          </p>
                     </section>
 
-                    <p>&#42; I am not a doctor. This is not designed to be Medical Advice. Please refer to your doctor for Medical desicisions</p>
+                    <p>&#42; I am not a doctor. This is not designed to be Medical Advice. Please refer to your doctor for Medical Decisions</p>
 
                </div>
 
