--- a/learning/signaling.html
+++ b/learning/signaling.html
@@ -639,7 +639,7 @@
                          <p class="top-link"><a href="#top">Top</a></p>
                     </section>
 
-                    <p>&#42; I am not a doctor. This is not designed to be Medical Advice. Please refer to your doctor for Medical desicisions</p>
+                    <p>&#42; I am not a doctor. This is not designed to be Medical Advice. Please refer to your doctor for Medical Decisions</p>
 
                </div>
 
