Updated Titles for Better SEO

--- a/investing/discipline.html
+++ b/investing/discipline.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
      <head>
-          <title>Stay Disciplined</title>
+          <title>My Rules to Staying Disciplined in Investing in Biotech</title>
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
