--- a/investing/strategy.html
+++ b/investing/strategy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
      <head>
-          <title>My Portfolio Building Strategy</title>
+          <title>My Portfolio Building Strategy for Biotech</title>
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -99,7 +99,6 @@
                               term trading. It keeps me active enough that I don't get bored and quit, but also focused on the long term so 
                               I don't miss the bigger picture. This is just my strategy.
                          </p>
-                         <p class="top-link"><a href="#top">Top</a></p>
                     
                     </section>
 
