--- a/investing/trading.html
+++ b/investing/trading.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
      <head>
-          <title>Trading Around a Core Position</title>
+          <title>My Strategy to Trading Around a Core Position</title>
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
