--- a/investing/fundamentals.html
+++ b/investing/fundamentals.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
      <head>
-          <title>Fundamental Analysis</title>
+          <title>My Approach to Fundamental Analysis</title>
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
