--- a/investing/investing.html
+++ b/investing/investing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
      <head>
-          <title>Investing in Biotech</title>
+          <title>My Strategy to Investing in Biotech</title>
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
