--- a/learning/oncology.html
+++ b/learning/oncology.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
      <head>
-          <title>Oncology</title>
+          <title>Learn About Oncology</title>
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
