Updated Meta Tags for SEO

--- a/investing/value.html
+++ b/investing/value.html
@@ -5,7 +5,7 @@
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <meta name="description" content="My System to Value Biotech">
+          <meta name="description" content="My System to Value Biotech Companies">
           <meta name="author" content="CoderKid2k">
 
           <link rel="stylesheet" href="../styles/header.css">
