--- a/learning/genetics.html
+++ b/learning/genetics.html
@@ -5,7 +5,7 @@
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <meta name="description" content="DNA Stucture, DNA Packaging, Chromosomes, Heredity, Inheritance">
+          <meta name="description" content="Learn concepts of Genetics like DNA Stucture, DNA Packaging, Chromosomes, Heredity, and Inheritance">
           <meta name="author" content="CoderKid2k">
 
           <link rel="stylesheet" href="../styles/header.css">
