--- a/learning/signaling.html
+++ b/learning/signaling.html
@@ -5,7 +5,7 @@
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <meta name="description" content="Cell Signaling, Growth Pathways, Cell Cycle, DDR Repair Pathways">
+          <meta name="description" content="Learn about concepts of Cell Signaling like Growth Pathways, Cell Cycle, DDR Repair Pathways, TLR Pathways, T cell Pathway and B cell Pathways">
           <meta name="author" content="CoderKid2k">
 
           <link rel="stylesheet" href="../styles/header.css">
