--- a/learning/tcells.html
+++ b/learning/tcells.html
@@ -5,7 +5,7 @@
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <meta name="description" content="T Cells, T cell Development, T cell Activation, Cell Therapies">
+          <meta name="description" content="Learn about concepts of T Cells like T cell Development, T cell Activation, the T cell Response and Cell Therapies">
           <meta name="author" content="CoderKid2k">
 
           <link rel="stylesheet" href="../styles/header.css">
