--- a/pages/science.html
+++ b/pages/science.html
@@ -5,7 +5,7 @@
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <meta name="description" content="Cell Signaling, Genentics, Immunology, Oncology, Hematology">
+          <meta name="description" content="Learn about Cell Signaling, Genentics, Immunology, Oncology, and Hematology">
           <meta name="author" content="CoderKid2k">
 
           <link rel="stylesheet" href="../styles/header.css">
