--- a/investing/discipline.html
+++ b/investing/discipline.html
@@ -5,7 +5,7 @@
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <meta name="description" content="My Rules for Staying Disciplined">
+          <meta name="description" content="My Rules for Staying Disciplined in Biotech Investing">
           <meta name="author" content="CoderKid2k">
 
           <link rel="stylesheet" href="../styles/header.css">
