--- a/investing/fundamentals.html
+++ b/investing/fundamentals.html
@@ -5,7 +5,7 @@
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <meta name="description" content="Fundamental Analysis">
+          <meta name="description" content="My Fundamental Analysis method for Biotech Companies">
           <meta name="author" content="CoderKid2k">
 
           <link rel="stylesheet" href="../styles/header.css">
