--- a/learning/bcells.html
+++ b/learning/bcells.html
@@ -5,7 +5,7 @@
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <meta name="description" content="B cells, Antibodies, B cell repsonse, Affinity Maturation, Class Switching">
+          <meta name="description" content=" Learn about concepts of B cells, Antibodies, the B cell repsonse, Affinity Maturation,  and Class Switching">
           <meta name="author" content="CoderKid2k">
 
           <link rel="stylesheet" href="../styles/header.css">
