--- a/learning/chemotherapy.html
+++ b/learning/chemotherapy.html
@@ -5,7 +5,7 @@
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <meta name="description" content="Chemotherapies, Anthracyclines, Antimetabolites, Antimitotic, Akylating">
+          <meta name="description" content="Learn about different Chemotherapies like, Anthracyclines, Antimetabolites, Antimitotic Drugs, and Akylating Agents">
           <meta name="author" content="CoderKid2k">
 
           <link rel="stylesheet" href="../styles/header.css">
