--- a/learning/hla.html
+++ b/learning/hla.html
@@ -5,7 +5,7 @@
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <meta name="description" content="Human Leukocyte Antigens">
+          <meta name="description" content="Learn about concepts of the Human Leukocyte Antigens">
           <meta name="author" content="CoderKid2k">
 
           <link rel="stylesheet" href="../styles/header.css">
