--- a/learning/oncology.html
+++ b/learning/oncology.html
@@ -5,7 +5,7 @@
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <meta name="description" content="Chemotherapies, Oncology, Cancer, Oncogenes, Hallmarks of Cancer">
+          <meta name="description" content="Learn about concepts of Oncology like Chemotherapies, Cancer Indicdence, Oncogenes, Hallmarks of Cancer and Cell Therapies">
           <meta name="author" content="CoderKid2k">
 
           <link rel="stylesheet" href="../styles/header.css">
