--- a/pages/science.html
+++ b/pages/science.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
      <head>
-          <title>Learn About The Biotechnology Science Genetics, Immunology and Oncology</title>
+          <title>Learn About the Science behind Biotech with Genetics, Immunology and Oncology</title>
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -235,10 +235,18 @@
                               <li class="science-topics">
                                    <a href="../learning/chemotherapy.html">Chemotherapies</a>
                               </li>
-                              <li>The Cell Cycle</li>
-                              <li>What is Cancer?</li>
-                              <li>Types and Incidence</li>
-                              <li>Hallmarks of Cancer</li>
+                              <li class="science-topics">
+                                   <a href="../learning/oncology.html#cellcycle">The Cell Cycle</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/oncology.html#whatis">What is Cancer?</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/oncology.html#typesofcancer">Type and Incidence</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/hallmarks.html">Hallmarks of Cancer</a>
+                              </li>
                               <li>DDR Pathways</li>
                               <li>Genetic Abnormalities</li>
                               <li>Cancer Genes</li>
