--- a/pages/innovation.html
+++ b/pages/innovation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
      <head>
-          <title>Science that is Innovation in Biotechnology Space</title>
+          <title>Science that is Leading the Innovation in Biotech</title>
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
