Added more Oncology

--- a/pages/science.html
+++ b/pages/science.html
@@ -247,9 +247,15 @@
                               <li class="science-topics">
                                    <a href="../learning/hallmarks.html">Hallmarks of Cancer</a>
                               </li>
-                              <li>DDR Pathways</li>
-                              <li>Genetic Abnormalities</li>
-                              <li>Cancer Genes</li>
+                              <li class="science-topics">
+                                   <a href="../learning/oncology.html#ddr">DNA Damage Repair Pathways</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/oncology.html#abnormal">Genetic Abnormalities</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/oncology.html#oncogenes">Cancer Genes</a>
+                              </li>
                               <li>Targeted Therapies</li>
                               <li>Cancer Epigenetics</li>
                               <li>Tumor Heterogeneity</li>
