--- a/pages/science.html
+++ b/pages/science.html
@@ -256,9 +256,15 @@
                               <li class="science-topics">
                                    <a href="../learning/oncology.html#oncogenes">Cancer Genes</a>
                               </li>
-                              <li>Targeted Therapies</li>
-                              <li>Cancer Epigenetics</li>
-                              <li>Tumor Heterogeneity</li>
+                              <li class="science-topics">
+                                   <a href="../learning/oncology.html#targets">Targeted Therapies</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/oncology.html#epigen">Cancer Epigenetics</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/oncology.html#hetero">Tumor Heterogeneity</a>
+                              </li>
                               <li>Immune Surveillance</li>
                               <li>Tumor Microenvironment</li>
                               <li>T cell Therapies</li>
