--- a/pages/science.html
+++ b/pages/science.html
@@ -265,12 +265,15 @@
                               <li class="science-topics">
                                    <a href="../learning/oncology.html#hetero">Tumor Heterogeneity</a>
                               </li>
-                              <li>Immune Surveillance</li>
-                              <li>Tumor Microenvironment</li>
-                              <li>T cell Therapies</li>
-                              <li>NK cell Therapies</li>
-                              <li>Gamma/Delta T cells</li>
-                              <li>iPSC cells</li>
+                              <li class="science-topics">
+                                   <a href="../learning/oncology.html#surveil">Immune Surveillance</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/oncology.html#tme">Tumor Microenvironment</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/celltherapy.html">Cell Therapies</a>
+                              </li>
                          </ul>
                     </section>
                     <section class="science-topic">
