--- a/learning/celltherapy.html
+++ b/learning/celltherapy.html
@@ -289,7 +289,7 @@
                     
                     </section>
 
-                    <p>&#42; I am not a doctor. This is not designed to be Medical Advice. Please refer to your doctor for Medical Decisions/p>
+                    <p>&#42; I am not a doctor. This is not designed to be Medical Advice. Please refer to your doctor for Medical Decisions</p>
 
                </div>
 
